--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
     "main": "./core/index",
     "scripts": {
         "start": "node index",
-        "test": "./node_modules/.bin/grunt validate --verbose"
+        "test": "./node_modules/.bin/grunt validate --verbose",
+        "test-ci": "./node_modules/.bin/grunt validate --reporter=tap-file --xunit-output-pattern=tests-results-%s.xml"
     },
     "engines": {
-        "node": "~0.10.0"
+        "node": ">= 0.10.0 < 0.11.0 || >= 0.11.13 < 0.13.0"
     },
     "engineStrict": true,
     "dependencies": {
@@ -72,9 +73,10 @@
     "devDependencies": {
         "blanket": "~1.1.5",
         "bower": "~1.3.5",
+        "casperjs": "^1.1.0-beta3",
         "grunt": "~0.4.1",
-        "grunt-cli": "~0.1.13",
         "grunt-autoprefixer": "1.0.1",
+        "grunt-cli": "~0.1.13",
         "grunt-concat-sourcemap": "~0.4.3",
         "grunt-contrib-clean": "~0.5.0",
         "grunt-contrib-compress": "~0.5.2",
@@ -94,12 +96,14 @@
         "matchdep": "~0.3.0",
         "mocha": "~1.15.1",
         "nock": "0.27.2",
-        "rewire": "~2.0.0",
+        "phantomjs": "1.9.1-7",
         "request": "~2.29.0",
         "require-dir": "~0.1.0",
+        "rewire": "~2.0.0",
         "should": "~2.1.1",
         "sinon": "~1.7.3",
         "supertest": "~0.8.2",
+        "tap-file": "0.0.2",
         "top-gh-contribs": "0.0.1"
     }
 }
